2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c: Update from Gnuk.
	* src/usb_lld.h: Ditto.
	* src/main.c (usb_cb_ctrl_write_finish, vcom_port_data_setup)
	(usb_cb_setup, usb_cb_get_descriptor, usb_cb_interface): Follow
	the API change of USB driver.

2015-07-23  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (nl): New.  '\n' in sed replacement text is not
	portable and break FreeBSD or MacOS X built.
	Reported by Kenji Rikitake.

2015-07-18  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.2.

2015-07-16  Niibe Yutaka  <gniibe@fsij.org>

	* src/config.h.in (@TARGET_DEFINE@): Remove.
	* src/configure [--with-dfu] (HEXOUTPUT_MAKE_OPTION): Enable .hex
	output.

2015-07-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.h: Update from Gnuk.
	* src/usb_stm32f103.c: Likewise.
	* src/main.c (usb_cb_get_descriptor): Follow the change.

	* chopstx: Update to 0.07.
	* src/sys.c: Update to 2.1 from chopstx.
	* src/sys.h: Likewise.
	* tool/openocd-script: Fix for newer OpenOCD.

2015-07-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (sys1_compat): Fix assignment syntax.

	* src/adc_stm32f103.c (get_adc_config): New.  Consolidate knowlege
	of boards for ADC usage.

	* src/neug.c: Remove inclusion of "board.h".

	* tool/neug_check.py (field): New field 'Board'.
	* src/main.c (main): Determine flash page size at runtime.
	(usbbuf): New.  Use for passwd and string transfer.
	(usb_cb_get_descriptor): Support sys_board_name.
	* src/neug.ld.in: Update for sys 2.1.

2015-07-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (.fill_ffff): Add ALIGN 4.

2015-07-08  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 0.06.

	* src/configure (help): Add other boards.

2015-06-30  Niibe Yutaka  <gniibe@fsij.org>

	* tool/neug_check.py: Fix raise and print statements.

	* tool/neug_upgrade.py: Support upgrade with passwd.
	(neug.set_passwd): New.

	* src/main.c (USB_NEUG_SET_PASSWD): New.
	(set_passwd): New.